# chakravyuh-honeypot

./: API_KEY.md  HACKATHON_COMPLIANCE.md  HACKATHON_SUBMISSION.md  LICENSE  QUICKSTART.md  README.md  demo.py  generate_api_key.py  list_gemini_models.py  pyproject.toml  requirements.txt  test_openai.py
app/: main.py
app/api/: routes.py
app/core/: config.py  security.py
app/models/: schemas.py
app/services/: callback_service.py  engagement_agent.py  intelligence_extractor.py  llm_intel_extractor.py  persona_guard.py  persona_prompt.py  reply_generator.py  scam_detector.py  session_manager.py
app/tests/: test_api.py  test_api_hardening.py  test_api_key_generator.py  test_hackathon_integration.py  test_intelligence_extractor.py  test_reply_generator.py  test_scam_detector.py  test_session_manager.py
app/tests/utils/: helpers.py
